ollama/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ollama-deploy
  namespace: ollama
  labels:
    app: ollama
spec:
  selector:
    matchLabels:
      app: ollama
  replicas: 1
  template:
    metadata:
      labels:
        app: ollama
    spec:
      nodeName: hp
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 11434
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 11434
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        volumeMounts:
        - name: ollama-volume
          mountPath: "/root/.ollama"
        ports:
        - containerPort:  11434
          name: http 
      restartPolicy: Always
      volumes:
      - name: ollama-volume
        hostPath:
          path: /opt/ollama
