ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
  namespace: ollama
spec:
  selector:
    app: ollama
  type: ClusterIP
  ports:
  - name: ollama
    protocol: TCP
    port: 80
    targetPort: http
