ollama/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-ingressroute
  namespace: ollama
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`ollama.local.net`)
      services:
        - name: ollama-svc
          port: 80
